# Atrias_stepping_stone_baseline

./: README.md
ZED_stepping_stone/: CMakeLists.txt  readme.txt
ZED_stepping_stone/src/: main.cpp
ZED_stepping_stone/vid/: original.avi  thresholded.avi
